syntax = "proto3";
package carkot;

message ConnectionRequest {
    repeated int32 ipValues
    int32 port = 2;
}

message ConnectionResponse {
    int32 uid = 1;
    int32 code = 2;   
}
